deleting some comonents

--- a/src/pages/PrincipalPage/style.css
+++ b/src/pages/PrincipalPage/style.css
@@ -2,11 +2,6 @@
 *{
   font-family: 'Josefin Sans', sans-serif;
 }
-body{
-  background-color: #efe6c8;
-  background-image: url('../../../public/images/back.png');
-  background-size: contain;
-}
 
 .PrincipalPageContainer{
   padding: 20px;
@@ -16,100 +11,21 @@ body{
   align-items: center;
 }
 
+.PrincipalPage__line{
+  border-bottom:solid 1px grey;
+  width:100%;
+}
+
 .PrincipalPage__section{
   display: flex;
   flex-direction: column;
   width: 100%;
   gap: 28px;
-}
-
-.PrincipalPage__section1{
-  height: 138px;
-  width: 96%;
-  border-style: solid;
-  border-color: brown;
-  border-radius: 24px;
-  padding: 10px;
-  padding-bottom: 10px;
-  transition: .5s, color .10s;
-      -webkit-transition: .5s, color .10s;
-      -moz-transition: .5s, color .10s;
-}
-
-.PrincipalPage__section1:hover{
-  transform: scale3d(1.2, 1.2, 0.3);
-      -webkit-transform: scale3d(1.2, 1.2, 0.3);
-      -moz-transform: scale3d(1.2, 1.2, 0.3);
-}
-
-.PrincipalPage__Section1--button{
-  border-style: none;
-  font-size: 12px;
-  background-color:#ffd0d7;
-  border-radius: 20px;
-  width: 50%;
-  height: 44px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.PrincipalPage__section2{
-  height: 138px;
-  width: 96%;
-  border-style: solid;
-  border-color: brown;
-  border-radius: 24px;
-  padding: 10px;
-  transition: .5s, color .10s;
-      -webkit-transition: .5s, color .10s;
-      -moz-transition: .5s, color .10s;
-}
-
-.PrincipalPage__section2:hover{
-  transform: scale3d(1.2, 1.2, 0.3);
-      -webkit-transform: scale3d(1.2, 1.2, 0.3);
-      -moz-transform: scale3d(1.2, 1.2, 0.3);
+  padding-top: 20px;
 
 }
 
-.PrincipalPage__section3{
-  height: 138px;
-  width: 96%;
-  border-style: solid;
-  border-color: brown;
-  border-radius: 24px;
-  padding: 10px;
-  transition: .5s, color .10s;
-      -webkit-transition: .5s, color .10s;
-      -moz-transition: .5s, color .10s;
-}
 
-.PrincipalPage__section3:hover{
-  transform: scale3d(1.2, 1.2, 0.3);
-      -webkit-transform: scale3d(1.2, 1.2, 0.3);
-      -moz-transform: scale3d(1.2, 1.2, 0.3);
-
-}
-
-.PrincipalPage__section4{
-  height: 138px;
-  width: 96%;
-  border-style: solid;
-  border-color: brown;
-  border-radius: 24px;
-  padding: 10px;
-  transition: .5s, color .10s;
-      -webkit-transition: .5s, color .10s;
-      -moz-transition: .5s, color .10s;
-}
-
-.PrincipalPage__section4:hover{
-  transform: scale3d(1.2, 1.2, 0.3);
-      -webkit-transform: scale3d(1.2, 1.2, 0.3);
-      -moz-transform: scale3d(1.2, 1.2, 0.3);
-
-}
 
 @media (min-width:1200px) {
   .PrincipalPage__title{
