--- a/src/components/Items/style.css
+++ b/src/components/Items/style.css
@@ -8,8 +8,12 @@
   flex-direction: row;
 }
 
-.dropdown__section2--logo{
-  width: 32%;
+.dropdown__section2--line{
+  border-bottom:solid 1px grey;
+  width:78%;
+  display: flex;
+  position: absolute;
+  top: 47px;
 }
 
 .dropdown__Section1--button{
@@ -25,8 +29,9 @@
 }
 
 .dropdown__Section1--buttonText{
-  font-size: 45px;
+  font-size: 29px;
   color: #afadad;
+  padding-top: 19px;
 }
 
 .dropdown-menu {
@@ -40,19 +45,4 @@
   left: -15px;
 }
 
-.dropdown-menu.show {
-  display: block;
-}
-
-.dropdown-menu li {
-  padding: 12px 16px;
-}
-
-.dropdown-menu li a {
-  color: black;
-  text-decoration: none;
-}
-
-.dropdown-menu li a:hover {
-  background-color: #ddd;
-}
+/* */
