css cake's page

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,12 +1,24 @@
 .containerHeader{
   display: flex;
   justify-content: space-evenly;
+  padding: 10px;
+}
+
+.containerHeader__amasaDetails{
+  display: flex;
 }
 
 .containerHeader__image{
   width: 7%;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .containerHeader__title{
   margin: unset;
+}
+
+.containerHeader__shoppingCart--btn{
+  border-style: none;
+  background-color: white;
 }
