--- a/src/pages/Cake/style.css
+++ b/src/pages/Cake/style.css
@@ -1,7 +1,7 @@
 .containerCake{
   display: flex;
   position: relative;
-  top: 104px;
+  top: 59px;
 }
 
 .containerCake__side1{
@@ -30,4 +30,14 @@
 
 .containerCake__amount--am{
   padding: 5px;
+}
+
+@media(min-width:1200px){
+  .containerCake{
+    justify-content: center;
+  }
+
+  .containerCake__side1{
+    width: 17%;
+  }
 }
