migrating to Nextjs

--- a/src/pages/PrincipalPage/principalPage.module.css
+++ b/src/pages/PrincipalPage/principalPage.module.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;600&display=swap');
-*{
+/* *{
   font-family: 'Josefin Sans', sans-serif;
-}
+} */
 
 .PrincipalPageContainer{
+  font-family: 'Josefin Sans', sans-serif;
   padding: 20px;
   display: flex;
   flex-direction: column;
