--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;600&display=swap');
 
-body{
+/* body{
   background-color: white;
-}
+} */
 
 .ContainerHome{
   position: relative;
@@ -10,6 +10,7 @@ body{
   display: flex;
   flex-direction: column;
   font-family: 'Josefin Sans', sans-serif;
+  background-color: white;
 }
 
 .ContainerHome::before{
