implementing apollo client

--- a/src/pages/Cake/cake.module.css
+++ b/src/pages/Cake/cake.module.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;600&display=swap');
+
 .containerCake{
+  font-family: 'Josefin Sans', sans-serif;
   display: flex;
   position: relative;
   top: 59px;
